load("@//bazel/glsl:def.bzl", "glsl_shader")

glsl_shader(
    name = "RGBA2gray_shader",
    shader = "glsl/RGBA2Gray.comp",
    deps = [
        "//glsl/lib:lluvia_glsl_library"
    ],
    visibility = ["//visibility:public"]
)

glsl_shader(
    name = "ImageDownsampleX_8ui_shader",
    shader = "glsl/ImageDownsampleX_8ui.comp",
    deps = [
        "//glsl/lib:lluvia_glsl_library"
    ],
    visibility = ["//visibility:public"]
)

glsl_shader(
    name = "ImageDownsampleY_8ui_shader",
    shader = "glsl/ImageDownsampleY_8ui.comp",
    deps = [
        "//glsl/lib:lluvia_glsl_library"
    ],
    visibility = ["//visibility:public"]
)
