load("@//bazel/glsl:def.bzl", "glsl_shader")

glsl_shader(
    name = "RGBA2gray_shader",
    shader = "glsl/RGBA2Gray.comp",
    deps = [
        "//glsl/lib:lluvia_glsl_library"
    ],
    visibility = ["//visibility:public"]
)

glsl_shader(
    name = "ImageDownsampleX_8ui_shader",
    shader = "glsl/ImageDownsampleX_8ui.comp",
    deps = [
        "//glsl/lib:lluvia_glsl_library"
    ],
    visibility = ["//visibility:public"]
)

glsl_shader(
    name = "ImageDownsampleY_8ui_shader",
    shader = "glsl/ImageDownsampleY_8ui.comp",
    deps = [
        "//glsl/lib:lluvia_glsl_library"
    ],
    visibility = ["//visibility:public"]
)

glsl_shader(
    name = "ImageModel_shader",
    shader = "glsl/ImageModel.comp",
    deps = [
        "//glsl/lib:lluvia_glsl_library"
    ],
    visibility = ["//visibility:public"]
)

glsl_shader(
    name = "FlowUpdate_shader",
    shader = "glsl/FlowUpdate.comp",
    deps = [
        "//glsl/lib:lluvia_glsl_library"
    ],
    visibility = ["//visibility:public"]
)

glsl_shader(
    name = "FlowUpdateDelta_shader",
    shader = "glsl/FlowUpdateDelta.comp",
    deps = [
        "//glsl/lib:lluvia_glsl_library"
    ],
    visibility = ["//visibility:public"]
)

glsl_shader(
    name = "FlowPredictX_shader",
    shader = "glsl/FlowPredictX.comp",
    deps = [
        "//glsl/lib:lluvia_glsl_library"
    ],
    visibility = ["//visibility:public"]
)

glsl_shader(
    name = "FlowPredictY_shader",
    shader = "glsl/FlowPredictY.comp",
    deps = [
        "//glsl/lib:lluvia_glsl_library"
    ],
    visibility = ["//visibility:public"]
)

glsl_shader(
    name = "FlowPredictPayloadX_shader",
    shader = "glsl/FlowPredictPayloadX.comp",
    deps = [
        "//glsl/lib:lluvia_glsl_library"
    ],
    visibility = ["//visibility:public"]
)

glsl_shader(
    name = "FlowPredictPayloadY_shader",
    shader = "glsl/FlowPredictPayloadY.comp",
    deps = [
        "//glsl/lib:lluvia_glsl_library"
    ],
    visibility = ["//visibility:public"]
)

glsl_shader(
    name = "FlowSmooth_shader",
    shader = "glsl/FlowSmooth.comp",
    deps = [
        "//glsl/lib:lluvia_glsl_library"
    ],
    visibility = ["//visibility:public"]
)
