load("@rules_vulkan//glsl:defs.bzl", "glsl_shader")
load("@rules_cc//cc:defs.bzl", "cc_binary")

cc_binary(
    name = "opticalFlow",
    srcs = [
        "cpp/main.cpp"
    ],
    visibility = ["//visibility:public"],
)

glsl_shader(
    name = "RGBA2gray_shader",
    shader = "glsl/RGBA2Gray.comp",
    deps = [
        "//lluvia/glsl/lib:lluvia_glsl_library"
    ],
    visibility = ["//visibility:public"]
)

glsl_shader(
    name = "ImageDownsampleX_8ui_shader",
    shader = "glsl/ImageDownsampleX_8ui.comp",
    deps = [
        "//lluvia/glsl/lib:lluvia_glsl_library"
    ],
    visibility = ["//visibility:public"]
)

glsl_shader(
    name = "ImageDownsampleY_8ui_shader",
    shader = "glsl/ImageDownsampleY_8ui.comp",
    deps = [
        "//lluvia/glsl/lib:lluvia_glsl_library"
    ],
    visibility = ["//visibility:public"]
)

glsl_shader(
    name = "ImageModel_shader",
    shader = "glsl/ImageModel.comp",
    deps = [
        "//lluvia/glsl/lib:lluvia_glsl_library"
    ],
    visibility = ["//visibility:public"]
)

glsl_shader(
    name = "FlowUpdate_shader",
    shader = "glsl/FlowUpdate.comp",
    deps = [
        "//lluvia/glsl/lib:lluvia_glsl_library"
    ],
    visibility = ["//visibility:public"]
)

glsl_shader(
    name = "FlowUpdateDelta_shader",
    shader = "glsl/FlowUpdateDelta.comp",
    deps = [
        "//lluvia/glsl/lib:lluvia_glsl_library"
    ],
    visibility = ["//visibility:public"]
)

glsl_shader(
    name = "FlowPredictX_shader",
    shader = "glsl/FlowPredictX.comp",
    deps = [
        "//lluvia/glsl/lib:lluvia_glsl_library"
    ],
    visibility = ["//visibility:public"]
)

glsl_shader(
    name = "FlowPredictY_shader",
    shader = "glsl/FlowPredictY.comp",
    deps = [
        "//lluvia/glsl/lib:lluvia_glsl_library"
    ],
    visibility = ["//visibility:public"]
)

glsl_shader(
    name = "FlowPredictPayloadX_shader",
    shader = "glsl/FlowPredictPayloadX.comp",
    deps = [
        "//lluvia/glsl/lib:lluvia_glsl_library"
    ],
    visibility = ["//visibility:public"]
)

glsl_shader(
    name = "FlowPredictPayloadY_shader",
    shader = "glsl/FlowPredictPayloadY.comp",
    deps = [
        "//lluvia/glsl/lib:lluvia_glsl_library"
    ],
    visibility = ["//visibility:public"]
)

glsl_shader(
    name = "FlowSmooth_shader",
    shader = "glsl/FlowSmooth.comp",
    deps = [
        "//lluvia/glsl/lib:lluvia_glsl_library"
    ],
    visibility = ["//visibility:public"]
)

glsl_shader(
    name = "Flow2RGBA_shader",
    shader = "glsl/Flow2RGBA.comp",
    deps = [
        "//lluvia/glsl/lib:lluvia_glsl_library"
    ],
    visibility = ["//visibility:public"]
)

glsl_shader(
    name = "RGBA2HSVA_shader",
    shader = "glsl/RGBA2HSVA.comp",
    deps = [
        "//lluvia/glsl/lib:lluvia_glsl_library"
    ],
    visibility = ["//visibility:public"]
)

glsl_shader(
    name = "HSVA2RGBA_shader",
    shader = "glsl/HSVA2RGBA.comp",
    deps = [
        "//lluvia/glsl/lib:lluvia_glsl_library"
    ],
    visibility = ["//visibility:public"]
)
