"""
"""

load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")
load("@//lluvia/bazel/expand_template:def.bzl", "expand_template")

expand_template(
    name = "core_lua_cc_library_header",
    template = "include/lluvia/core/impl/LuaLibrary.h.in",
    file_vars = {
        "LUA": "lluvia/lua/ll/library.lua"
    },
    data = [
        "//lluvia/lua:ll_lua_library"
    ],
)



config_setting(
    name = "on_linux",
    constraint_values = [
        "@platforms//os:linux",
    ],
)

config_setting(
    name = "on_windows",
    constraint_values = [
        "@platforms//os:windows",
    ],
)

cc_library (
    name = "core_cc_library",
    srcs = glob(["src/**/*.cpp"]),
    hdrs = glob(["include/**/*.h"]) + [":core_lua_cc_library_header"],
    strip_include_prefix = "include/",
    copts = select({
        ":on_linux": [
            "-std=c++17",
            "-stdlib=libstdc++",
        ],
        ":on_windows": [
            "/std:c++17",
            "/w",
        ],
    }),
    linkstatic = True,
    linkopts = select({
        ":on_linux": [
            "-lvulkan",
            "-lm",
            "-ldl",
            "-lstdc++fs",
        ],
        ":on_windows": [
        ],
    }),
    deps = [
        "@sol//:sol_cc_library",
        "@lua//:lua_cc_library",
        "@miniz//:miniz_cc_library",
    ] + select({
        ":on_windows": [
            "@vulkan_windows//:vulkan",
        ],
        "//conditions:default": [],
    }),
    visibility = ["//visibility:public"]
)



test_opts = select({
    ":on_linux": [
        "-std=c++17",
    ],
    ":on_windows": [
        "/std:c++17",
        "/w",
    ],
})

cc_test (
    name = "test_Base64",
    srcs = ["test/test_Base64.cpp"],
    copts = test_opts,
    deps = [
        ":core_cc_library",
        "@catch//:catch_cc_library"
    ],
)

cc_test (
    name = "test_BufferCopy",
    srcs = ["test/test_BufferCopy.cpp"],
    copts = test_opts,
    deps = [
        ":core_cc_library",
        "@catch//:catch_cc_library"
    ],
)

cc_test (
    name = "test_BufferCreation",
    srcs = ["test/test_BufferCreation.cpp"],
    copts = test_opts,
    deps = [
        ":core_cc_library",
        "@catch//:catch_cc_library"
    ],
)

cc_test (
    name = "test_BufferMapping",
    srcs = ["test/test_BufferMapping.cpp"],
    copts = test_opts,
    deps = [
        ":core_cc_library",
        "@catch//:catch_cc_library"
    ],
)

cc_test (
    name = "test_ComputeNode",
    srcs = ["test/test_ComputeNode.cpp"],
    copts = test_opts,
    deps = [
        ":core_cc_library",
        "@catch//:catch_cc_library"
    ],
    data = [
        "//lluvia/cpp/core/test/glsl:assign_shader"
    ]
)

cc_test (
    name = "test_ComputeNodeImage",
    srcs = ["test/test_ComputeNodeImage.cpp"],
    copts = test_opts,
    deps = [
        ":core_cc_library",
        "@catch//:catch_cc_library"
    ],
    data = [
        "//lluvia/cpp/core/test/glsl:image_to_buffer_shader",
        "//lluvia/cpp/core/test/glsl:texture_to_buffer_shader"
    ]
)

cc_test (
    name = "test_ImageCreation",
    srcs = ["test/test_ImageCreation.cpp"],
    copts = test_opts,
    deps = [
        ":core_cc_library",
        "@catch//:catch_cc_library"
    ],
)

cc_test (
    name = "test_ImageCopy",
    srcs = ["test/test_ImageCopy.cpp"],
    copts = test_opts,
    deps = [
        ":core_cc_library",
        "@catch//:catch_cc_library"
    ],
)

cc_test (
    name = "test_Interpreter",
    srcs = ["test/test_Interpreter.cpp"],
    copts = test_opts,
    deps = [
        ":core_cc_library",
        "@catch//:catch_cc_library"
    ],
)

cc_test (
    name = "test_MemoryFreeSpaceManager",
    srcs = ["test/test_MemoryFreeSpaceManager.cpp"],
    copts = test_opts,
    deps = [
        ":core_cc_library",
        "@catch//:catch_cc_library"
    ],
)

cc_test (
    name = "test_ProgramCreation",
    srcs = ["test/test_ProgramCreation.cpp"],
    copts = test_opts,
    deps = [
        ":core_cc_library",
        "@catch//:catch_cc_library"
    ],
    data = [
        "//lluvia/cpp/core/test/glsl:assign_shader"
    ]
)

cc_test (
    name = "test_SessionCreation",
    srcs = ["test/test_SessionCreation.cpp"],
    copts = test_opts,
    deps = [
        ":core_cc_library",
        "@catch//:catch_cc_library"
    ],
)

cc_test (
    name = "test_utils",
    srcs = ["test/test_utils.cpp"],
    copts = test_opts,
    deps = [
        ":core_cc_library",
        "@catch//:catch_cc_library"
    ],
)

cc_test (
    name = "test_VulkanDriver",
    srcs = ["test/test_VulkanDriver.cpp"],
    copts = test_opts,
    deps = [
        ":core_cc_library",
        "@catch//:catch_cc_library"
    ],
)

cc_test (
    name = "test_PushConstants",
    srcs = ["test/test_PushConstants.cpp"],
    copts = test_opts,
    deps = [
        ":core_cc_library",
        "@catch//:catch_cc_library"
    ],
    data = [
        "//lluvia/cpp/core/test/glsl:pushConstants_shader",
        "//lluvia/cpp/core/test/glsl:pushConstants2_shader",
    ]
)

cc_test (
    name = "test_Duration",
    srcs = ["test/test_Duration.cpp"],
    copts = test_opts,
    deps = [
        ":core_cc_library",
        "@catch//:catch_cc_library"
    ],
    data = [
        "//lluvia/cpp/core/test/glsl:assign_shader"
    ]
)

cc_test (
    name = "test_miniz",
    srcs = ["test/test_miniz.cpp"],
    copts = test_opts,
    deps = [
        "@miniz//:miniz_cc_library",
        "@catch//:catch_cc_library",
    ],
    data = [
        "//lluvia/cpp/core/test/nodes:node_files",
        "//lluvia/cpp/core/test/nodes:test_node_library"
    ]
)

cc_test (
    name = "test_LoadLibrary",
    srcs = ["test/test_LoadLibrary.cpp"],
    copts = test_opts,
    deps = [
        ":core_cc_library",
        "@catch//:catch_cc_library",
    ],
    data = [
        "//lluvia/cpp/core/test/nodes:node_files"
    ]
)
