"""
"""

load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")
load("@lluvia//lluvia/bazel/expand_template:def.bzl", "expand_template")
load("@lluvia//lluvia/cpp:config.bzl", "CC_TEST_COPTS", "CC_TEST_DEPS")

expand_template(
    name = "core_lua_cc_library_header",
    data = [
        "@lluvia//lluvia/lua:ll_lua_library",
    ],
    file_vars = {
        "LUA": "lluvia/lua/ll/library.lua",
    },
    template = "include/lluvia/core/impl/LuaLibrary.h.in",
)

cc_library(
    name = "core_cc_library",
    srcs = glob(["src/**/*.cpp"]),
    hdrs = glob([
        "include/**/*.h",
        "include/**/*.hpp",
    ]) + [":core_lua_cc_library_header"],
    copts = select({
        "@lluvia//:linux": [
            "-std=c++17",
            "-stdlib=libstdc++",
            "-Werror",
            "-Wall",
            "-Wextra",
            "-Wshadow",
            "-Wshorten-64-to-32",
            "-Wnon-virtual-dtor",
            "-pedantic",
        ],
        "@lluvia//:android": [
            "-std=c++17",
            "-stdlib=libstdc++",
            "-Werror",
            "-Wall",
            "-Wextra",
            "-Wshadow",
            "-Wshorten-64-to-32",
            "-Wnon-virtual-dtor",
            "-pedantic",
        ],
        "@lluvia//:windows": [
            "/std:c++17",
            "/w",
        ],
    }),
    # linkstatic = True,
    linkopts = select({
        "@lluvia//:linux": [
            "-lvulkan",
            "-lm",
            "-ldl",
        ],
        "@lluvia//:android": [
            "-lm",
            "-ldl",
        ],
        "@lluvia//:windows": [],
        "//conditions:default": [],
    }),
    strip_include_prefix = "include/",
    visibility = ["//visibility:public"],
    deps = [
        "@miniz//:miniz_cc_library",
        "@rules_lua//cc:lua_cc_library",
        "@rules_vulkan//vulkan:vulkan_cc_library",
        "@sol//:sol_cc_library",
    ],
)

cc_test(
    name = "test_Base64",
    srcs = ["test/test_Base64.cpp"],
    copts = CC_TEST_COPTS,
    deps = CC_TEST_DEPS,
)

cc_test(
    name = "test_BufferCopy",
    srcs = ["test/test_BufferCopy.cpp"],
    copts = CC_TEST_COPTS,
    deps = CC_TEST_DEPS,
)

cc_test(
    name = "test_BufferCreation",
    srcs = ["test/test_BufferCreation.cpp"],
    copts = CC_TEST_COPTS,
    deps = CC_TEST_DEPS,
)

cc_test(
    name = "test_BufferMapping",
    srcs = ["test/test_BufferMapping.cpp"],
    copts = CC_TEST_COPTS,
    deps = CC_TEST_DEPS,
)

cc_test(
    name = "test_ComputeNode",
    srcs = ["test/test_ComputeNode.cpp"],
    copts = CC_TEST_COPTS,
    data = [
        "//lluvia/cpp/core/test/glsl:assign_shader",
    ],
    deps = CC_TEST_DEPS,
)

cc_test(
    name = "test_ComputeNodeImage",
    srcs = ["test/test_ComputeNodeImage.cpp"],
    copts = CC_TEST_COPTS,
    data = [
        "//lluvia/cpp/core/test/glsl:image_to_buffer_shader",
        "//lluvia/cpp/core/test/glsl:texture_to_buffer_shader",
    ],
    deps = CC_TEST_DEPS,
)

cc_test(
    name = "test_ImageCreation",
    srcs = ["test/test_ImageCreation.cpp"],
    copts = CC_TEST_COPTS,
    deps = CC_TEST_DEPS,
)

cc_test(
    name = "test_ImageLayout",
    srcs = ["test/test_ImageLayout.cpp"],
    copts = CC_TEST_COPTS,
    deps = CC_TEST_DEPS,
)

cc_test(
    name = "test_Instance",
    srcs = ["test/test_Instance.cpp"],
    copts = CC_TEST_COPTS,
    deps = CC_TEST_DEPS,
)

cc_test(
    name = "test_ImageCopy",
    srcs = ["test/test_ImageCopy.cpp"],
    copts = CC_TEST_COPTS,
    deps = CC_TEST_DEPS,
)

cc_test(
    name = "test_Interpreter",
    srcs = ["test/test_Interpreter.cpp"],
    copts = CC_TEST_COPTS,
    deps = CC_TEST_DEPS,
)

cc_test(
    name = "test_MemoryBarrier",
    srcs = ["test/test_MemoryBarrier.cpp"],
    copts = CC_TEST_COPTS,
    deps = CC_TEST_DEPS,
)

cc_test(
    name = "test_MemoryFreeSpaceManager",
    srcs = ["test/test_MemoryFreeSpaceManager.cpp"],
    copts = CC_TEST_COPTS,
    deps = CC_TEST_DEPS,
)

cc_test(
    name = "test_ProgramCreation",
    srcs = ["test/test_ProgramCreation.cpp"],
    copts = CC_TEST_COPTS,
    data = [
        "//lluvia/cpp/core/test/glsl:assign_shader",
    ],
    deps = CC_TEST_DEPS,
)

cc_test(
    name = "test_SessionCreation",
    srcs = ["test/test_SessionCreation.cpp"],
    copts = CC_TEST_COPTS,
    deps = CC_TEST_DEPS,
)

cc_test(
    name = "test_utils",
    srcs = ["test/test_utils.cpp"],
    copts = CC_TEST_COPTS,
    deps = CC_TEST_DEPS,
)

cc_test(
    name = "test_PushConstants",
    srcs = ["test/test_PushConstants.cpp"],
    copts = CC_TEST_COPTS,
    data = [
        "//lluvia/cpp/core/test/glsl:pushConstants2_shader",
        "//lluvia/cpp/core/test/glsl:pushConstants_shader",
    ],
    deps = CC_TEST_DEPS,
)

cc_test(
    name = "test_Device",
    srcs = ["test/test_Device.cpp"],
    copts = CC_TEST_COPTS,
    deps = CC_TEST_DEPS,
)

cc_test(
    name = "test_Duration",
    srcs = ["test/test_Duration.cpp"],
    copts = CC_TEST_COPTS,
    data = [
        "//lluvia/cpp/core/test/glsl:assign_shader",
    ],
    deps = CC_TEST_DEPS,
)

cc_test(
    name = "test_miniz",
    srcs = ["test/test_miniz.cpp"],
    copts = CC_TEST_COPTS,
    data = [
        "//lluvia/cpp/core/test/nodes:node_files",
        "//lluvia/cpp/core/test/nodes:test_node_library",
    ],
    deps = [
        "@bazel_tools//tools/cpp/runfiles",
        "@catch//:catch_cc_library",
        "@miniz//:miniz_cc_library",
    ],
)

cc_test(
    name = "test_LoadLibrary",
    srcs = ["test/test_LoadLibrary.cpp"],
    copts = CC_TEST_COPTS,
    data = [
        "//lluvia/cpp/core/test/nodes:node_files",
    ],
    deps = CC_TEST_DEPS,
)

cc_test(
    name = "test_debug_utils",
    srcs = ["test/test_debug_utils.cpp"],
    copts = CC_TEST_COPTS,
    data = [
        "//lluvia/cpp/core/test/nodes:node_files",
    ],
    deps = CC_TEST_DEPS,
)

cc_test(
    name = "test_PortDescriptor",
    srcs = ["test/test_PortDescriptor.cpp"],
    copts = CC_TEST_COPTS,
    deps = CC_TEST_DEPS,
)
