load("@lluvia//lluvia/bazel/node:def.bzl", "ll_node")


ll_node(
    name = "Sobel",
    shader = "Sobel.comp",
    builder = 'Sobel.lua',
    deps = [
        "@lluvia//lluvia/glsl/lib:lluvia_glsl_library"
    ],
    visibility = ["//visibility:public"]
)

ll_node(
    name = "RGBA2Gray",
    shader = "RGBA2Gray.comp",
    builder = 'RGBA2Gray.lua',
    deps = [
        "@lluvia//lluvia/glsl/lib:lluvia_glsl_library"
    ],
    visibility = ["//visibility:public"]
)
