load("@lluvia//lluvia/bazel/cython:def.bzl", "pyx_library")

package(default_visibility = ["//visibility:public"])

pyx_library (
    name = "pyx_library",
    srcs = [
        "lluvia/__init__.py",
        "lluvia/core/__init__.py",
        "lluvia/core/command_buffer.pxd",
        "lluvia/core/command_buffer.pyx",
        "lluvia/core/compute_dimension.pxd",
        "lluvia/core/core_object.pxd",
        "lluvia/core/debug_utils.pxd",
        "lluvia/core/debug_utils.pyx",
        "lluvia/core/duration.pxd",
        "lluvia/core/duration.pyx",
        "lluvia/core/node.pxd",
        "lluvia/core/node.pyx",
        "lluvia/core/parameter.pxd",
        "lluvia/core/parameter.pyx",
        "lluvia/core/program.pxd",
        "lluvia/core/program.pyx",
        "lluvia/core/session.pxd",
        "lluvia/core/session.pyx",
        "lluvia/core/types.pxd",
        "lluvia/core/vulkan.pxd",
        "lluvia/util.py",
    ] +
    glob([
        "lluvia/core/buffer/*.py",
        "lluvia/core/buffer/*.pyx",
        "lluvia/core/buffer/*.pxd",
    ]) +
    glob([
        "lluvia/core/device/*.py",
        "lluvia/core/device/*.pyx",
        "lluvia/core/device/*.pxd",
    ]) +
    glob([
        "lluvia/core/image/*.py",
        "lluvia/core/image/*.pyx",
        "lluvia/core/image/*.pxd",
    ]) +
    glob([
        "lluvia/core/memory/*.py",
        "lluvia/core/memory/*.pyx",
        "lluvia/core/memory/*.pxd",
    ]) +
    glob([
        "lluvia/core/enums/*.py",
        "lluvia/core/enums/*.pyx",
        "lluvia/core/enums/*.pxd",
        "lluvia/core/impl/*.py",
        "lluvia/core/impl/*.pyx",
        "lluvia/core/impl/*.pxd",
    ]) +
    glob([
        "lluvia/nodes/**/*py",
        "lluvia/glsl/**/*py",
        "lluvia/resources/**/*py",
    ]),
    srcs_version = "PY3",
    imports = [
        "."
    ],
    directives = [
        "--3str",
        "--cplus"
    ],
    deps = [
        "//lluvia/cpp/core:core_cc_library",
        "@lua//:lua_cc_library",
    ] + select({
        "@lluvia//:windows": [
            "@python_windows//:python3-lib",
            "@numpy_windows//:numpy_cc_library",
        ],
        "@lluvia//:linux": [
            "@python_linux//:python3-lib",
            "@numpy_linux//:numpy_cc_library",
        ],
    }),
    copts = select({
        "@lluvia//:windows":[
            "/std:c++17",
            "/w",
            "/nologo",
            "/INCREMENTAL:NO",
            "/DLL",
        ],
        "@lluvia//:linux": [
            "--std=c++17",
            "-stdlib=libstdc++",
            "-fwrapv",
            "-O3",
            "-Wall",
            "-fno-strict-aliasing",
            "-fPIC",
            "-DSOL_ALL_SAFETIES_ON=1",
        ],
    }),
    linkopts = select({
        "@lluvia//:linux": [
            "-lvulkan",
            "-lm",
            "-ldl",
            "-pthread",
            "-shared",
            "-Wl,-O3 -Wl,-Bsymbolic-functions -Wl,-z,relro",
            "-g",
            "-fstack-protector-strong",
            "-Wformat",
            "-Werror=format-security",
            "-Wdate-time",
            "-D_FORTIFY_SOURCE=2",
        ],
        "@lluvia//:windows": [
            "/MANIFESTUAC:NO",
            "/MANIFEST:EMBED,ID=2",
        ],
    }),
    visibility = ["//visibility:public"]
)

