load("@rules_python//python:defs.bzl", "py_binary")

filegroup(
  name="test_data",
  srcs = glob([
    "test_data/*.txt",
    "test_data/*.in"
  ]),
  visibility = ["//visibility:public"]
)

py_binary(
  name = "expand_template",
  srcs = ["expand_template.py"],
  python_version = "PY3",
  data = [
    ":test_data"
  ],
  visibility = ["//visibility:public"]
)
