"""
"""

load("@rules_python//python:defs.bzl", "py_test")
load("@lluvia//lluvia/bazel/node:def.bzl", "ll_node")
load("@lluvia//lluvia/python/test:config.bzl", "PY_TEST_DEPS")


ll_node(
    name = "CameraUndistort_rgba8ui",
    builder = "CameraUndistort_rgba8ui.lua",
    shader = "CameraUndistort_rgba8ui.comp",
    visibility = ["//visibility:public"],
    deps = [
        "@lluvia//lluvia/glsl/lib:lluvia_glsl_library",
    ],
)

py_test(
    name = "CameraUndistort_rgba8ui_test",
    srcs = ["CameraUndistort_rgba8ui_test.py"],
    data = [
        ":CameraUndistort_rgba8ui_runfiles"
    ],
    deps = PY_TEST_DEPS,
    legacy_create_init = False
)
