"""
"""

load("@rules_cc//cc:defs.bzl", "cc_test")
load("@rules_python//python:defs.bzl", "py_test")
load("@lluvia//lluvia/bazel/node:def.bzl", "ll_node")
load("@lluvia//lluvia/cpp:config.bzl", "CC_TEST_COPTS")
load("@lluvia//lluvia/python/test:config.bzl", "PY_TEST_DEPS")

NODE_ARCHIVE_PATH = "lluvia/color"

CC_TEST_DEPS = [
    "@lluvia//lluvia/cpp/core:core_cc_library",
    "@catch//:catch_cc_library",
    "@bazel_tools//tools/cpp/runfiles:runfiles",
]

ll_node(
    name = "RGBA2Gray",
    builder = "RGBA2Gray.lua",
    shader = "RGBA2Gray.comp",
    archivePath = NODE_ARCHIVE_PATH,
    visibility = ["//visibility:public"],
    deps = [
        "@lluvia//lluvia/glsl/lib:lluvia_glsl_library",
    ],
)

cc_test(
    name = "RGBA2Gray_cc_test",
    srcs = ["RGBA2Gray_test.cpp"],
    copts = CC_TEST_COPTS,
    data = [
        ":RGBA2Gray_runfiles",
    ],
    deps = CC_TEST_DEPS,
)

py_test(
    name = "RGBA2Gray_test",
    srcs = ["RGBA2Gray_test.py"],
    data = [
        ":RGBA2Gray_runfiles",
        "//lluvia/resources:resources"
    ],
    deps = PY_TEST_DEPS,
    legacy_create_init = False
)

ll_node(
    name = "RGBA2HSVA",
    builder = "RGBA2HSVA.lua",
    shader = "RGBA2HSVA.comp",
    archivePath = NODE_ARCHIVE_PATH,
    visibility = ["//visibility:public"],
    deps = [
        "@lluvia//lluvia/glsl/lib:lluvia_glsl_library",
    ],
)

cc_test(
    name = "RGBA2HSVA_cc_test",
    srcs = ["RGBA2HSVA_test.cpp"],
    copts = CC_TEST_COPTS,
    data = [
        ":RGBA2HSVA_runfiles",
    ],
    deps = CC_TEST_DEPS,
)

py_test(
    name = "RGBA2HSVA_test",
    srcs = ["RGBA2HSVA_test.py"],
    data = [
        ":RGBA2HSVA_runfiles",
        "//lluvia/resources:resources"
    ],
    deps = PY_TEST_DEPS,
    legacy_create_init = False
)

ll_node(
    name = "HSVA2RGBA",
    builder = "HSVA2RGBA.lua",
    shader = "HSVA2RGBA.comp",
    archivePath = NODE_ARCHIVE_PATH,
    visibility = ["//visibility:public"],
    deps = [
        "@lluvia//lluvia/glsl/lib:lluvia_glsl_library",
    ],
)

cc_test(
    name = "HSVA2RGBA_cc_test",
    srcs = ["HSVA2RGBA_test.cpp"],
    copts = CC_TEST_COPTS,
    data = [
        ":HSVA2RGBA_runfiles",
    ],
    deps = CC_TEST_DEPS,
)

py_test(
    name = "HSVA2RGBA_test",
    srcs = ["HSVA2RGBA_test.py"],
    data = [
        ":HSVA2RGBA_runfiles",
        "//lluvia/resources:resources"
    ],
    deps = PY_TEST_DEPS,
    legacy_create_init = False
)
